# wonderful-packages

./: .gitignore  Containerfile  Pipfile  README.md  build-bootstrap.sh  build-package.sh  pkgtool  pyproject.toml  rebuild-repository.sh  shell.sh
config/: pacman.conf  runtime-env-vars.sh
containers/aarch64/: Containerfile  makepkg.conf  pacman.conf
containers/arm32v6/: Containerfile  makepkg.conf  pacman.conf
containers/i686/: Containerfile  makepkg.conf  pacman.conf
containers/linux/: pacman-7.0.0-makepkg-fix-git.patch
containers/linux/aarch64/: Containerfile  makepkg.conf
containers/linux/arm32v6/: Containerfile  makepkg.conf
containers/linux/i686/: Containerfile  makepkg.conf
containers/riscv64/: Containerfile  makepkg.conf  pacman.conf
containers/x86_64/: Containerfile  makepkg.conf  pacman.conf
docker/: Dockerfile
misc/: png2ico.sh
misc/windows/: bootstrap-installer-x86_64.iss  makepkg.conf
packages-unused/wf-lua-vstruct/: PKGBUILD
patches/: blocksds-0.10.2-fix-memcpy-memset-regression.patch  gcc12-poisoned-calloc-fix-libgccjit.patch  gcc13-clang-MJ.patch  gcc13-multilib-arm-elf  gcc15-armv5-muldi3-optimization.patch  gcc15-poison-system-directories.patch  libpng-1.6.34-disable-tests.patch  lua-toml-0.4.0-remove-march-native.patch  picolibc.specs
patches/old/: gcc12-poison-system-directories.patch  gcc13-arm-dwarf4.patch  gcc14-poison-system-directories.patch
tool/: environment.py  main.py  package.py  util.py
tool/cmd/: autobuild.py  build.py  build_bootstrap.py  copy_anyarchs.py  mirror.py
tool/macos/: pacman
(+6 files in other folders)
