[tool.poetry]
name = "wf-pkgtool"
version = "0.1.0"
description = "Wonderful package building tool"
authors = ["Adrian Siekierka <kontakt@asie.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
addict = "^2.4.0"
termcolor = "^2.3.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
