[project]
name = "wf-pkgtool"
version = "0.1.0"
description = "Wonderful package building tool"
authors = [{ name = "Adrian Siekierka", email = "kontakt@asie.pl" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "addict>=2.4.0,<3",
    "termcolor>=3.0.1,<4",
    "tqdm>=4.66.1,<5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
